--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                 <p><b id="con-alerta-fecha">{{ fecha }}</b></p>
                 <p>Lotes: </p>
                 {% for lote in lotes %}
-                <p> * <b id="con-alerta-lote">{{ lote }}</b></p>
+                <p> - <b id="con-alerta-lote">{{ lote }}</b></p>
                 {%endfor%}
                 <p> {{ razones }}</p>
             </div>
